--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-https://spreekuur.landegge.nl/spreekuur.pptx
+<meta http-equiv="refresh" content="0; url=https://spreekuur.landegge.nl/spreekuur.pptx">
