--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<meta http-equiv="refresh" content="0; url=https://spreekuur.landegge.nl/spreekuur.pptx">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>HTML Redirect</title>
+    <meta http-equiv="refresh" content="0; url=https://spreekuur.landegge.nl/spreekuur.pptx" />
+</head>
+<body>
+    <h1 style="text-align:center;color:green;">
+    Spreekuur
+  </h1>
+    <p style="text-align:center;">
+        If your browser supports Refresh, 
+        you'll be redirected to GeeksforGeeks 
+        Homepage, in 5 seconds. 
+    </p>
+</body>
+</html>
