--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </h1>
     <p style="text-align:center;">
         If your browser supports Refresh, 
-        you'll be redirected to GeeksforGeeks 
-        Homepage, in 5 seconds. 
+        you'll be redirected in 5 seconds. 
     </p>
 </body>
 </html>
